UnitTestProject added, some other stuff, Connection to timelog server successful

--- a/TimecardApp/TimecardApp.csproj
+++ b/TimecardApp/TimecardApp.csproj
@@ -249,6 +249,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="Toolkit.Content\Microsoft.Phone.Controls.Toolkit.dll" />
     <Content Include="ServiceReferences.ClientConfig">
       <SubType>Designer</SubType>
     </Content>
