--- a/TimecardApp/TimecardApp.csproj
+++ b/TimecardApp/TimecardApp.csproj
@@ -113,13 +113,14 @@
     <Compile Include="Model\NonPersistent\HelperClass.cs" />
     <Compile Include="Model\IDBObjects.cs" />
     <Compile Include="Model\TimelogSetting.cs" />
+    <Compile Include="Model\Timelog\TimelogOperation.cs" />
     <Compile Include="Model\Timelog\TimelogSession.cs" />
     <Compile Include="Model\Timelog\ITimelogWrapper.cs" />
     <Compile Include="Model\Project.cs" />
     <Compile Include="Model\Setting.cs" />
     <Compile Include="Model\Timecard.cs" />
-    <Compile Include="Model\TimelogProject.cs" />
     <Compile Include="Model\TimelogTask.cs" />
+    <Compile Include="Model\Timelog\TimelogState.cs" />
     <Compile Include="Model\Timelog\TimelogWrapper.cs" />
     <Compile Include="Model\WorkTask.cs" />
     <Compile Include="Service References\TimelogProjectManagementService\Reference.cs">
@@ -135,6 +136,8 @@
     <Compile Include="ViewModel\AppViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\FilterViewModel.cs" />
+    <Compile Include="ViewModel\ITimelogViewModel.cs" />
+    <Compile Include="View\ITimelogUsingView.cs" />
     <Compile Include="ViewModel\ProjectViewModel.cs" />
     <Compile Include="ViewModel\BackupViewModel.cs" />
     <Compile Include="ViewModel\SettingViewModel.cs" />
@@ -152,6 +155,9 @@
     </Compile>
     <Compile Include="View\FilterPage.xaml.cs">
       <DependentUpon>FilterPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\TimelogLoginPage.xaml.cs">
+      <DependentUpon>TimelogLoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\TimelogPage.xaml.cs">
       <DependentUpon>TimelogPage.xaml</DependentUpon>
@@ -196,6 +202,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\FilterPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\TimelogLoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
